src/test/deca/context/invalid/return/return_missing_in_nested_if_custom.deca
// Description :
// return manquant dans structure if imbriquée
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : return non garanti

class J {
    int f(boolean a, boolean b) {
        if (a) {
            if (b) {
                return 1;
            } // else pas de return
        } // else pas de return
    }
}
